--- a/index.html
+++ b/index.html
@@ -28,6 +28,22 @@
         <h2 >Description</h2>
           <p> With a highly breathable upper and a casual silhouette, the Nike Roshe Run is definitely a perfect model for summer. For Spring/Summer 2013 a fresh Mint Green colorway's version of this 'yet classic' pair is now available to order. </p>
       </div>
+      <div>
+        <h3>
+          <span class="space1">COLOR</span>
+         <span class="space2">SIZE</span>
+          <span class="space3">QTY</span>
+        </h3> 
+        </div>
+
+      <div>
+        <section class="shape">
+
+
+        </section>
+      </div>
+
+
     </div>
     
   </div>
